--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset = "utf-8">
-    <title>nauka</title>
+    <title>Harry Potter</title>
 </head>
-
 <body>
-    <h1>największy nagłówek</h1>
-    <p>akapit 1</p>
-    <h6>najmniejszy nagłówek</h6>
-    <p>akapit 2</p>
-</body> 
+    <h1>Opis Książki</h1>
+    <h2>Rozdział 1</h2>
+    <p>Państwo Dursleyowie mieszkali na Privet Drive 14. <abbr name = "deoxyribonucleic acid">DNA</abbr>wykluczało pokrewieństwo Harrego.<br />
+    Harry <del>powiedział, że</del><ins>rzekł</ins><q>Nie jestem bratem Dudley'a</q></p>
+    <p>
+        <def>Mugol</def> oznacza <b>pozamagiczną</b> osobę.
+    </p>
+
+</body>
 </html>
